...

            <TextView
                android:id="@+id/tvTrackingStartDateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etTrackingStartDateEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorTrackingStartDateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvTrackingStartTimeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etTrackingStartTimeEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorTrackingStartTimeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvTrackingEndDateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etTrackingEndDateEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorTrackingEndDateEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvTrackingEndTimeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/etTrackingEndTimeEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorTrackingEndTimeEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvLabelTrackingNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <EditText
                android:id="@+id/etTrackingNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <TextView
                android:id="@+id/tvErrorTrackingNameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnUpdateTracking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:id="@+id/btnEditTrackingBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
