...
    <string name="username_required">The username is required</string>
    <string name="pw_required">The password is required</string>
    <string name="pw_length">The password must have at least 8 characters</string>
    <string name="email_required">The email is required</string>
    <string name="error_adding_employee">Could not add employee</string>
    <string name="success_adding_employee">Employee has been added successfully</string>
    <string name="error_invalid_start_date_format">The start date must be of format DD.MM.YYYY</string>
    <string name="error_start_date_required">The start date is required</string>
    <string name="error_invalid_end_date_format">The end date must be of format DD.MM.YYYY</string>
    <string name="error_end_date_required">The end date is required</string>
    <string name="error_start_time_required">The start time is required</string>
    <string name="error_invalid_start_time">The start time must be of format H:mm</string>
    <string name="error_end_time_required">The end time is required</string>
    <string name="error_invalid_end_time">The end time must be of format H:mm</string>
    <string name="error_tracking_name_required">The tracking name is required</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="active_tracking">Active Tracking</string>
    <string name="stop_tracking_question">Stop Tracking?</string>
    <string name="do_you_really_want_to_stop_the_tracking_question">Do you really want to stop the tracking?</string>
    <string name="active_tracking_running_since">Active tracking running since</string>
    <string name="success_delete_tracking">Tracking was successfully deleted!</string>
...
    <string name="search_devices">Search devices</string>
    <string name="add_device">Add device and pair</string>
    <string name="enter_device_name">Enter device name</string>
    <string name="employees">Employees:</string>
    <string name="export_timesheet">Export Timesheet</string>
    <string name="error_export">No trackings to export!</string>
    <string name="end_date_before_start_date">The starting time is after the end time!</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="pw_matching">The password confirmation does not match</string>

</resources>
